--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,97 @@
-<h1>Fontend</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <title>Cadastro Simples</title>
+</head>
+<body>
+  <div class="container">
+    <h1>Cadastro Simples</h1>
+    <hr>
+    <div>
+      <input type="hidden" name="id">
+      <div class="from-group">
+          <label for="Name"></label>
+          <input class="form-control" name="name" placeholder="Digite o nome">
+      </div>
+      <button class="btn btn-success" save>Salvar</button>
+    </div>
+    <table class="table" id="clients">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody id="clientsRows"></tbody>
+    </table>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script>
+    const API = 'http://localhost:3000';
+
+    const createButton = (label, type) => {
+      return $('<button>').addClass(`btn btn-${type}`).html(label);
+    };
+
+    const renderRows = clients => {
+      const rows = clients.map(client => {
+        const updateButton = createButton('Atualizer', 'warning');
+        updateButton.click(() => loadClient(client));
+
+        const removeButton = createButton('Exluir', 'danger');
+        removeButton.click(() => removeClient(client));
+
+        return $('<tr>')
+          .append($('<td>').append(client.name))
+          .append($('<td>').append(updateButton).append(removeButton));
+      });
+
+      $('#clientsRows').html(rows);
+    };
+
+    const loadClient = client => {
+      $('[name=id]').val(client._id);
+      $('[name=name]').val(client.name);
+    };
+
+    const removeClient = client => {
+      $.ajax({
+        method: 'DELETE',
+        url: `${API}/clients/${client._id}`,
+        success: getClients,
+      });
+    }
+
+    const getClients = () => {
+      $.ajax({
+        url: `${API}/clients`,
+        success: clients => {
+          renderRows(clients);
+          $('[name]').val('');
+        }
+      })
+    };
+
+    const saveClient = () => {
+      const _id = $('[name=id]').val();
+      const name = $('[name=name]').val();
+      $.ajax({
+        method: _id ? 'PUT' : 'POST',
+        url: `${API}/clients/${_id}`,
+        data: _id ? {_id, name} : {name},
+        success: getClients
+      });
+    };
+
+    $(() => {
+      getClients();
+      $('[save]').click(saveClient)
+    });
+  </script>
+</body>
+</html>
